--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ src = [
 ]
 revision = "origin/master..."
 
+[tool.graylint]
+revision = "origin/master..."
+src = ["."]
+
 [tool.pylint."messages control"]
 # Check import order only with isort. Pylint doesn't support a custom list of first
 # party packages. We want to consider "darkgraylib" and "graylint" as first party.
