build: trigger activity summary on push to branch

--- a/.github/workflows/recent-activity-summary.yml
+++ b/.github/workflows/recent-activity-summary.yml
@@ -3,6 +3,9 @@ name: Recent Activity Summary
 on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: '0 0 * * MON'  # Run every Monday at 00:00 UTC
+  pull_request:
+    branches:
+      - repo-summary-discussion
   workflow_dispatch:  # Allow manual triggering
 
 jobs:
