build: fix triggering of summary on push to branch

--- a/.github/workflows/recent-activity-summary.yml
+++ b/.github/workflows/recent-activity-summary.yml
@@ -5,7 +5,7 @@ on:  # yamllint disable-line rule:truthy
     - cron: '0 0 * * MON'  # Run every Monday at 00:00 UTC
   pull_request:
     branches:
-      - repo-summary-discussion
+      - master
   workflow_dispatch:  # Allow manual triggering
 
 jobs:
