build: remove branch from repo-summary-post action

--- a/.github/workflows/recent-activity-summary.yml
+++ b/.github/workflows/recent-activity-summary.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run PR Summary Action
-        uses: akaihola/repo-summary-post@reusable-action
+        uses: akaihola/repo-summary-post
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           repo_name: ${{ github.repository }}
