--- a/.github/workflows/recent-activity-summary.yml
+++ b/.github/workflows/recent-activity-summary.yml
@@ -2,13 +2,18 @@
 name: Recent Activity Summary
 on:  # yamllint disable-line rule:truthy
   workflow_dispatch:  # Allow manual triggering
+    inputs:
+      extra_commands:
+        description: 'Extra commands to run before the main action'
+        required: false
+        default: ''
 
 jobs:
   prs:
     runs-on: ubuntu-latest
     steps:
       - name: Generate and Post Repository Summary
-        uses: akaihola/repo-summary-post@v0.0.5
+        uses: akaihola/repo-summary-post@v0.0.5-debug
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           repo-name: ${{ github.repository }}
@@ -18,5 +23,6 @@ jobs:
           verbose: '2'
           dry-run: 'true'
           output-content: '-'
+          extra-commands: ${{ github.event.inputs.extra-commands }}
         env:
           OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
