--- a/.github/workflows/recent-activity-summary.yml
+++ b/.github/workflows/recent-activity-summary.yml
@@ -17,16 +17,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Generate and Post Repository Summary
-        uses: akaihola/repo-summary-post@${{ github.event.inputs.version }}
+        uses: 'akaihola/repo-summary-post@${{ github.event.inputs.version }}'
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          repo-name: ${{ github.repository }}
+          github-token: '${{ secrets.GITHUB_TOKEN }}'
+          repo-name: '${{ github.repository }}'
           project-name: 'Darker'
           extra-packages: 'llm-openrouter'
           # Optional inputs for debugging purposes:
           verbose: '2'
           dry-run: 'true'
           output-content: '-'
-          extra-commands: ${{ github.event.inputs.extra-commands }}
+          extra-commands: '${{ github.event.inputs.extra-commands }}'
         env:
-          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
+          OPENROUTER_API_KEY: '${{ secrets.OPENROUTER_API_KEY }}'
