fix: correct OpenRouter api key env var name

--- a/.github/workflows/recent-activity-summary.yml
+++ b/.github/workflows/recent-activity-summary.yml
@@ -31,4 +31,4 @@ jobs:
           output-content: '-'
           extra-commands: '${{ inputs.extra-commands }}'
         env:
-          OPENROUTER_API_KEY: '${{ secrets.OPENROUTER_API_KEY }}'
+          OPENROUTER_KEY: '${{ secrets.OPENROUTER_KEY }}'
