feat: add ruff code re-formatter plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ darker =
 [options.entry_points]
 darker.formatter =
     black = darker.formatters.black_formatter:BlackFormatter
+    ruff = darker.formatters.ruff_formatter:RuffFormatter
     none = darker.formatters.none_formatter:NoneFormatter
 console_scripts =
     darker = darker.__main__:main_with_error_handling
