refactor: Black as a plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,9 @@ darker =
   .pyi
 
 [options.entry_points]
+darker.formatter =
+    black = darker.formatters.black_formatter:BlackFormatter
+    none = darker.formatters.none_formatter:NoneFormatter
 console_scripts =
     darker = darker.__main__:main_with_error_handling
 
