--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ select = ["ALL"]
 ignore = [
     "A002",  # builtin-argument-shadowing
     "ANN101",  # Missing type annotation for `self` in method
+    "COM812",  # Trailing comma missing
     "D203",  # One blank line required before class docstring
     "D213",  # Multi-line docstring summary should start at the second line
     "D400",  # First line should end with a period (duplicates D415)
