--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     black>=22.3.0
     darkgraylib~=2.0.1
     toml>=0.10.0
+    typing_extensions>=4.0.1
 # NOTE: remember to keep `.github/workflows/python-package.yml` in sync
 #       with the minimum required Python version
 python_requires = >=3.8
