fix: keep Pylint at max version 3.2.7
This way we continue to support Python 3.8 for just a bit longer. Pylint
3.3.0 already dropped support for Python 3.8.

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ test =
     pathspec  # to test `gen_python_files` in `test_black_diff.py`
     pydocstyle
     pygments
-    pylint
+    pylint<=3.2.7  # pylint 3.3.0 dropped Python 3.8 support
     pytest>=6.2.0
     pytest-kwparametrize>=0.0.3
     regex>=2021.4.4
