--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
             git+https://github.com/akaihola/darkgraylib.git@main \
             defusedxml \
             pygments \
-            pylint \
+            'pylint<=3.2.7' \
             pytest>=6.2.0 \
             regex \
             requests \
