chore: amend .gitignore and flake8 excludes

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,10 @@
 [flake8]
 # Line length according to Black rules
 max-line-length = 88
+# Skip some directories
+exclude =
+    .*
+    build
 # Ignore rules which conflict with Black
 ignore =
     # C408 Unnecessary dict call - rewrite as a literal.
