feat: pyupgrade formatter plugin

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ darker =
 darker.formatter =
     black = darker.formatters.black_formatter:BlackFormatter
     ruff = darker.formatters.ruff_formatter:RuffFormatter
+    pyupgrade = darker.formatters.pyupgrade_formatter:PyupgradeFormatter
     none = darker.formatters.none_formatter:NoneFormatter
 console_scripts =
     darker = darker.__main__:main_with_error_handling
