test: Black compatible Flake8 configuration [ruff-plugin]

--- a/setup.cfg
+++ b/setup.cfg
@@ -97,8 +97,14 @@ ignore =
     D400
     # D415 First line should end with a period, question mark, or exclamation point
     D415
+    # E203 Whitespace before ':'
+    E203
     # E231 missing whitespace after ','
     E231
+    # E501 Line too long (82 > 79 characters)
+    E501
+    # E701 Multiple statements on one line (colon)
+    E701
     # W503 line break before binary operator
     W503
 # Darglint options when run as a Flake8 plugin:
