--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,11 +20,11 @@ jobs:
       wheel-path: ${{ steps.get-darker-version.outputs.wheel-path }}
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
-      - name: Install wheel
-        run: python -m pip install wheel
       - name: Build wheel distribution
-        run: python setup.py bdist_wheel
+        run: uv build --wheel
       - name: Upload wheel for other jobs
         uses: actions/upload-artifact@v4
         with:
