--- a/.github/workflows/flake8.yml
+++ b/.github/workflows/flake8.yml
@@ -9,6 +9,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
       - uses: TrueBrain/actions-flake8@v2
         with:
           plugins: >
