--- a/.github/workflows/test-bump-version.yml
+++ b/.github/workflows/test-bump-version.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
 
       - name: Make sure that `darkgray_bump_version` still finds all version strings
@@ -20,9 +22,7 @@ jobs:
         # This is used to update the call for reviewing pull requests
         # in `README.rst`.
         run: |
-          pip install \
-            https://github.com/akaihola/darkgray-dev-tools/archive/refs/heads/main.zip
-          darkgray_bump_version \
+          uvx --from=darkgray-dev-tools darkgray_bump_version \
             --minor \
             --dry-run \
             --token=${{ secrets.GITHUB_TOKEN }}
