--- a/.github/workflows/isort.yml
+++ b/.github/workflows/isort.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
       - run: pip install 'isort>=5.0.1'
       - uses: wearerequired/lint-action@v2.3.0
         with:
