--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -146,12 +146,12 @@ jobs:
       - build-wheel
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
-      - name: Install twine
-        run: python -m pip install twine
       - name: Download wheel uploaded by the build-wheel job
         uses: actions/download-artifact@v4.1.7
       - name: Build source distribution
-        run: python setup.py sdist
+        run: uv build --sdist
       - name: Validate distributions
-        run: twine check dist/*
+        run: uvx twine check dist/*
