--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -9,11 +9,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
       - run: |
-          pip install -U \
+          uv pip install --system -U \
             black \
             git+https://github.com/akaihola/darkgraylib.git@main \
             flynt \
