test: add stubs for pyupgrade
Can be removed if https://github.com/asottile/pyupgrade/issues/977 is
resolved.

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,4 +1,6 @@
 [mypy]
+mypy_path = stubs/
+
 disallow_any_unimported = True
 disallow_any_expr = False
 disallow_any_decorated = True
@@ -79,9 +81,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pytest.*]
-ignore_missing_imports = True
-
-[mypy-pyupgrade.*]
 ignore_missing_imports = True
 
 [mypy-setuptools.*]
