--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,6 +22,7 @@ jobs:
             defusedxml \
             pygments \
             'pylint<=3.2.7' \
+            pylint-per-file-ignores \
             pytest>=6.2.0 \
             pyupgrade>=2.31.0 \
             regex \
