--- a/setup.cfg
+++ b/setup.cfg
@@ -75,6 +75,7 @@ test =
     pydocstyle
     pygments
     pylint<=3.2.7  # pylint 3.3.0 dropped Python 3.8 support
+    pylint-per-file-ignores
     pytest>=6.2.0
     pytest-kwparametrize>=0.0.3
     pyupgrade>=2.31.0
