--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,6 @@ package_dir =
 packages = find:
 install_requires =
     # NOTE: remember to keep `constraints-oldest.txt` in sync with these
-    black>=22.3.0
     darkgraylib~=2.1.0
     toml>=0.10.0
     typing_extensions>=4.0.1
@@ -52,6 +51,8 @@ console_scripts =
     darker = darker.__main__:main_with_error_handling
 
 [options.extras_require]
+black =
+    black>=22.3.0
 flynt =
     flynt>=0.76
 isort =
