--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -13,7 +13,8 @@ jobs:
         uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: '3.x'
+          cache: 'pip'
       - name: Install dependencies for running Pylint
         run: |
           uv pip install --system -U \
