--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -23,6 +23,8 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
+        with:
+          cache: 'pip'
       - name: Build wheel distribution
         run: uv build --wheel
       - name: Upload wheel for other jobs
