--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -12,6 +12,8 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
       - uses: actions/setup-python@v5
+        with:
+          cache: 'pip'
       - run: uvx --from pip-tools pip-compile setup.cfg
       - name: Check dependencies for known security vulnerabilities using Safety
         run: uvx safety check --file requirements.txt
