--- a/.github/workflows/test-future.yml
+++ b/.github/workflows/test-future.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+          cache: 'pip'
       - name: Install dependencies
         run: |
           # strict dependency resolution added in pip 20.3
