README sphinx website generation
* Made significantly easier and still used sphinx
* https://github.com/akaihola/darker/pull/url

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,6 +74,10 @@ dev = [
     "wheel>=0.21.0",
     "astor>=0.8.1",
 ]
+docs = [
+   "sphinx",
+   "sphinx-rtd-theme",
+]
 
 [project.urls]
 Homepage = "https://github.com/akaihola/darker"
