--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -11,10 +11,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-          cache: 'pip'
       - name: Install dependencies for running Pylint
         run: |
           uv pip install --system -U \
