--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -22,9 +22,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v3
-      - uses: actions/setup-python@v5
         with:
-          cache: 'pip'
+          enable-cache: true
+      - uses: actions/setup-python@v5
       - name: Build wheel distribution
         run: uv build --wheel
       - name: Upload wheel for other jobs
