--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -11,9 +11,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install uv
         uses: astral-sh/setup-uv@v3
-      - uses: actions/setup-python@v5
         with:
-          cache: 'pip'
+          enable-cache: true
+      - uses: actions/setup-python@v5
       - run: uvx --from pip-tools pip-compile setup.cfg
       - name: Check dependencies for known security vulnerabilities using Safety
         run: uvx safety check --file requirements.txt
