--- a/.github/workflows/mypy.yml
+++ b/.github/workflows/mypy.yml
@@ -9,13 +9,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
-        with:
-          enable-cache: true
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: |
+            **/setup.cfg
+            **/pyproject.toml
       - run: |
           uv pip install --system -U \
             black \
