--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -20,11 +20,14 @@ jobs:
       wheel-path: ${{ steps.get-darker-version.outputs.wheel-path }}
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
-      - uses: actions/setup-python@v5
+          cache-dependency-glob: |
+            **/setup.cfg
+            **/pyproject.toml
       - name: Build wheel distribution
         run: uv build --wheel
       - name: Upload wheel for other jobs
