--- a/.github/workflows/safety.yml
+++ b/.github/workflows/safety.yml
@@ -9,11 +9,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
       - name: Install uv
-        uses: astral-sh/setup-uv@v3
+        uses: astral-sh/setup-uv@v4
         with:
           enable-cache: true
-      - uses: actions/setup-python@v5
+          cache-dependency-glob: |
+            **/setup.cfg
+            **/pyproject.toml
       - run: uvx --from pip-tools pip-compile setup.cfg
       - name: Check dependencies for known security vulnerabilities using Safety
         run: uvx safety check --file requirements.txt
