docs(contr): add @haohu321 as a contributor

--- a/contributors.yaml
+++ b/contributors.yaml
@@ -151,6 +151,9 @@ gesslerpd:
 guettli:
   - {link_type: issues, type: Bug reports}
   - {link_type: search-comments, type: Bug reports}
+haohu321:
+  - {link_type: issues, type: Bug reports}
+  - {link_type: search-comments, type: Bug reports}
 hauntsaninja:
   - {link_type: issues, type: Bug reports}
 hugovk:
