--- a/.github/workflows/test-future.yml
+++ b/.github/workflows/test-future.yml
@@ -19,13 +19,19 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-          cache: 'pip'
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: |
+            **/setup.cfg
+            **/pyproject.toml
       - name: Install dependencies
         run: |
           # strict dependency resolution added in pip 20.3
           # CVE-2021-3572 fixed in pip 21.1
-          python -m pip install --upgrade 'pip>=21.1'
-          pip install \
+          uv pip install --system --upgrade 'pip>=21.1'
+          uv pip install \
             --constraint=constraints-future.txt \
             --upgrade \
             --upgrade-strategy=eager \
