--- a/.github/workflows/test-future.yml
+++ b/.github/workflows/test-future.yml
@@ -7,6 +7,7 @@ name: test-future
 on:  # yamllint disable-line rule:truthy
   schedule:
     - cron: "05 20 * * 6"
+  workflow_dispatch:
 
 jobs:
   test-future:
