--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,7 @@ test =
     flynt>=0.76
     isort>=5.0.1
     mypy>=0.990
+    packaging
     pathspec  # to test `gen_python_files` in `test_black_diff.py`
     pydocstyle
     pygments
