--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -71,7 +71,7 @@ jobs:
               source venv/bin/activate
               cert_file=/nix/var/nix/profiles/default/etc/ssl/certs/ca-bundle.crt
               export NIX_SSL_CERT_FILE=$cert_file
-              pip install "${{needs.build-wheel.outputs.wheel-path}}[test]"
+              pip install "${{needs.build-wheel.outputs.wheel-path}}"
               # Run tests in installed package to avoid plugin import issue:
               pytest $(python -c "
           import os, darker
