--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -71,7 +71,7 @@ jobs:
               source venv/bin/activate
               cert_file=/nix/var/nix/profiles/default/etc/ssl/certs/ca-bundle.crt
               export NIX_SSL_CERT_FILE=$cert_file
-              pip install "${{needs.build-wheel.outputs.wheel-path}}" --extra dev
+              pip install "${{needs.build-wheel.outputs.wheel-path}}[dev]"
               # Run tests in installed package to avoid plugin import issue:
               pytest $(python -c "
           import os, darker
@@ -126,7 +126,7 @@ jobs:
       - name: Download wheel uploaded by the build-wheel job
         uses: actions/download-artifact@v4
       - name: Install Darker and its dependencies from the wheel built earlier
-        run: pip install "${{needs.build-wheel.outputs.wheel-path}} --extra dev"
+        run: pip install "${{needs.build-wheel.outputs.wheel-path}}[dev]"
                          ${{ matrix.upgrade }} ${{ matrix.constraints }}
       - name: Upgrade Black, Flynt and Isort from GitHub if future constraints are used
         # This can't be done in the same Pip invocation as installing Darker
