--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -119,6 +119,8 @@ jobs:
         with:
           fetch-depth: 0
           # need full history since Pytest runs Darker itself below
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
