--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build wheel distribution
         run: |
           uv sync --all-packages
-          uv build
+          uv build --wheel
       - name: Upload wheel for other jobs
         uses: actions/upload-artifact@v4
         with:
