ci: run required checks to merge pr on prs as well

--- a/.github/workflows/darker-black-isort.yml
+++ b/.github/workflows/darker-black-isort.yml
@@ -1,7 +1,13 @@
 ---
 name: darker-black-isort
 
-on: push  # yamllint disable-line rule:truthy
+on:  # yamllint disable-line rule:truthy
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
 
 jobs:
   reformat-modified:
