--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -1,6 +1,14 @@
 ---
 name: Yaml Lint
-on: [push]  # yamllint disable-line rule:truthy
+
+on:  # yamllint disable-line rule:truthy
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
 jobs:
   lintAllTheThings:
     runs-on: ubuntu-latest
