--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -155,3 +155,34 @@ jobs:
         run: uv build --sdist
       - name: Validate distributions
         run: uvx twine check dist/*
+
+  validate-extras:
+    runs-on: ubuntu-latest
+    needs:
+      - build-wheel
+    steps:
+      - uses: actions/checkout@v5
+      - uses: astral-sh/setup-uv@v6
+      - uses: actions/setup-python@v5
+      - uses: actions/download-artifact@v4
+        run: >
+          uv pip install ${{needs.build-wheel.outputs.wheel-path}}[color]
+          | ( ! grep -E '^(error|warning): ' )
+      - name: Ensure Pygments was installed
+        run: uv pip show pygments
+
+  validate-no-extras:
+    runs-on: ubuntu-latest
+    needs:
+      - build-wheel
+    steps:
+      - uses: actions/checkout@v5
+      - uses: astral-sh/setup-uv@v6
+      - uses: actions/setup-python@v5
+      - uses: actions/download-artifact@v4
+      - name: Validate the [color] extras
+        run: >
+          uv pip install ${{needs.build-wheel.outputs.wheel-path}}
+          | ( ! grep -E "^(error|warning): " )
+      - name: Ensure Pygments was not installed
+        run: "! uv pip show pygments"
