--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -101,7 +101,6 @@ jobs:
           - '3.11'
           - '3.12'
           - '3.13'
-        constraints: ['']
         post_install: ['']
         include:
           - os: ubuntu-latest
@@ -109,7 +108,10 @@ jobs:
             post_install: uv sync --resolution lowest-direct
           - os: ubuntu-latest
             python-version: '3.13'
-            post_install: uv sync --upgrade
+            post_install: uv pip install
+                                 --upgrade
+                                 --requirements constraints-future.txt
+
     needs:
       - build-wheel
     steps:
@@ -129,13 +131,13 @@ jobs:
       - name: Download wheel uploaded by the build-wheel job
         uses: actions/download-artifact@v4
       - name: Install Darker and its dependencies from the wheel built earlier
-        run: pip install "${{needs.build-wheel.outputs.wheel-path}}[dev]"
-                         ${{ matrix.upgrade }} ${{ matrix.constraints }}
+        run: uv pip install --group=dev "${{needs.build-wheel.outputs.wheel-path}}"
       - name: Downgrade target-version when running oldest supported Black
-        if: matrix.constraints == '--constraint constraints-oldest.txt'
+        if: matrix.post_install == 'uv sync --resolution lowest-direct'
         run: |
           sed -i 's/, "py311", "py312"//' pyproject.toml
-      - name: Upgrade Black, Flynt and Isort from GitHub if future constraints are used
+      - name: Upgrade/downgrade packages for future/oldest test
+        # Upgrade Black, Flynt and Isort from GitHub if future constraints are used.
         # This can't be done in the same Pip invocation as installing Darker
         # since Darker might place an upper limit on Black, Flynt and/or Isort during
         # compatibility fixing periods.
