chore: get version number dynamically from source code

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,6 @@ requires = ["setuptools", "wheel"]  # PEP 508 specifications.
 
 [project]
 name = "darker"
-version = "2.1.1"
 authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
 license = {text = "BSD"}
 description = "Apply Black formatting only in regions changed since last commit"
@@ -21,7 +20,10 @@ dependencies = [
     "toml>=0.10.0",
     "typing_extensions>=4.0.1",
 ]
-dynamic = ["readme"]
+dynamic = ["readme", "version"]
+
+[tool.setuptools.dynamic]
+version = {attr = "darker.version.__version__"}
 
 [project.optional-dependencies]
 color = [
