--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,7 +69,7 @@ dev = [
     "requests_cache>=0.7",
     "ruamel.yaml>=0.17.21",
     "ruff>=0.2.2",
-    "twine>=2.0.0",
+    "twine>=2.0.0,!=6.1.0",
     "types-requests>=2.27.9",
     "types-toml>=0.10.4",
     "wheel>=0.21.0",
